--- a/json/apps.json
+++ b/json/apps.json
@@ -54,11 +54,10 @@
   {
     "name": "Nekoray",
     "image": "https://avatars.githubusercontent.com/u/95122236?v=4",
-    "os": ["Windows", "Linux"],
+    "os": ["Linux"],
     "downloadLinks": {
-      "Windows": "https://github.com/MatsuriDayo/nekoray/releases/download/3.26/nekoray-3.26-2023-12-09-windows64.zip",
       "Linux": "https://github.com/MatsuriDayo/nekoray/releases/download/3.26/nekoray-3.26-2023-12-09-linux64.zip"
     },
-    "ShowInMenu": false
+    "ShowInMenu": true
   }
 ]
